--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -3,10 +3,11 @@
 		<center><h2>Thêm mẫu dữ liệu cổ sinh</h2></center>
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
-			<!-- 	<tr>
+				<!-- deTai is a global variable -->
+				<tr ng-if="deTai == 'BSTMV.03/15-17'">
 					<td>Read excel file</td>
 					<td><js-xls onread="read" onerror="error"></js-xls></td>
-				</tr> -->
+				</tr>
 				<tr>
 					<td><label >Mã đề tài  <span class="has-required">(*)</span>: </label></td>
 					<td>
